# scdetect

src/apps/cc/: CMakeLists.txt  app.cpp  app.h  builder.h  detection.cpp  detection.h  notification.cpp  notification.h  worker.cpp  worker.h
src/apps/cc/config/: detector.cpp  detector.h
src/apps/cc/descriptions/: scdetect-cc.xml
src/apps/cc/detector/: arrival.cpp  arrival.h  arrival.ipp  detail.h  detection.h  detection_candidate.cpp  detection_candidate.h  detection_candidate_processor.cpp  detection_candidate_processor.h  detection_processor.cpp  detection_processor.h  detector.cpp  detector.h  event_parameters.h  exception.cpp  exception.h  inventory.h  linker.cpp  linker.h  match_result.h  status.h  template_processor.cpp  template_processor.h
src/apps/cc/detector/event/: detection_candidate.h  link.h  record.h  status.h  template_processor.h
src/apps/cc/detector/linker/: association.cpp  association.h
src/apps/cc/detector/template_processor/: buffer.cpp  buffer.h  state_machine.cpp  state_machine.h
src/apps/cc/filter/: crosscorrelation.h
src/apps/cc/notification/: detection.h
src/apps/cc/processing/: exception.cpp  exception.h  processor.cpp  processor.h  util.h  waveform_processor.cpp  waveform_processor.h
src/apps/cc/util/: sync_queue.h
src/apps/cc/worker/: detector_worker.cpp  detector_worker.h  exception.cpp  exception.h  recordstream.cpp  recordstream.h
src/apps/cc/worker/event/: command.cpp  command.h
